# TransactionService

./: .gitignore  Dockerfile  Readme.md  docker-compose.yaml  main.py  pyproject.toml
src/: container.py
src/api/v1/: app.py  dependencies.py  models.py
src/api/v1/routers/: customer_data.py  shop_data.py
src/core/: models.py
src/core/ports/: abstract_customer_data_repository.py  abstract_shop_data_retriever.py
src/core/services/: customer_data.py  shop_data.py
src/database/: engine.py  models.py
src/database/adapters/: sql_base_class.py  sql_customer_data_repository.py  sql_shop_data_retriever.py
