[tool.poetry]
name = "userdataservice"
version = "0.1.0"
description = ""
authors = ["Alexandr Ovsyannikov <alexov2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.14"
pydantic-settings = "^2.10.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
dependency-injector = "^4.48.1"
uvicorn = "^0.35.0"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
